--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.23.1"
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
